style: fix PDF style on Firefox Android

--- a/src/components/ExtendCorrection/ExtendedCorrection.css
+++ b/src/components/ExtendCorrection/ExtendedCorrection.css
@@ -28,6 +28,9 @@
   .print-only {
     display: block;
   }
+  .print-only li {
+    page-break-inside: avoid;
+  }
   div {
     break-inside: avoid;
   }
